# FibersCubicComul

./: .gitmodules  LICENSE  README.md  description.yaml
src/: APolA.h  AbComul.cpp  AbComul.h  AbOA.cpp  AbOA.h  CMakeLists.txt  CalcProj  ModelBuilder.cpp  ModelBuilder.h  NetCdfWriter.cpp  NetCdfWriter.h  OutputTime.cpp  OutputTime.h  OutputWrapper.cpp  OutputWrapper.h  ParametersInit.cpp  eqManager.cpp  eqManager.h  main.cpp
test/: config.yaml
